--- a/app/styles/type.css
+++ b/app/styles/type.css
@@ -1,10 +1,10 @@
-@import 'https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab';
+@import 'https://fonts.googleapis.com/css?family=Roboto|Fjalla+One';
 
 body {
     font-family: 'Roboto', sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Fjalla One', serif;
 }
 a {
     text-decoration: none;
@@ -32,6 +32,7 @@ header {
             }
 footer {
     text-align: center;
+    font-size: .75em;
 }
     footer a {
         text-decoration: none;
